--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode development",
     "prod": "webpack --mode production",
-    "serve": "webpack serve --mode development --hot --port 4041"
+    "serve": "webpack serve --mode development --hot --port 4041",
+    "build": "vue-cli-service build"
   },
   "keywords": [],
   "author": "",
