--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode development",
     "prod": "webpack --mode production",
-    "serve": "webpack serve --mode development --hot --port 4041",
-    "build": "vue-cli-service build"
+    "serve": "webpack serve --mode development --hot --port 4041"
   },
   "keywords": [],
   "author": "",
@@ -26,7 +25,7 @@
     "html-webpack-plugin": "^5.3.2",
     "style-loader": "^3.2.1",
     "vue-loader": "^16.8.3",
-    "webpack": "^5.90.3",
+    "webpack": "^5.52.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.1.1"
   },
